--- a/src/components/DocPre.astro
+++ b/src/components/DocPre.astro
@@ -1,10 +1,39 @@
 ---
-// const props = Astro.props;
+let html = await Astro.slots.render('default')
+const lines = html.split('\n');
+html = lines.slice(0, lines.length - 1).join('\n') + '</code>';
+let text = html.replace(/<[^>]*>/g, '');
+text = text.replace(/&lt;/g, '<');
+text = text.replace(/&gt;/g, '>');
+text = text.replace(/&quot;/g, '"');
+
+import CopyButton from '@components/CopyButton.svelte';
 ---
-<div class="code-container"><div><pre><slot /></pre></div></div>
+
+<div class="code-container">
+    <CopyButton copyText={text} client:visible />
+    <div>
+        <pre set:html={html} />
+    </div>
+</div>
+
 <style>
+    
     .code-container {
         overflow: hidden;
+        position: relative;
+    }
+
+    .copy-button {
+        position: absolute;
+        top: 5px;
+        right: 5px;
+        background-color: #f5f5f5;
+        border: 1px solid #e3e3e3;
+        border-radius: 4px;
+        padding: 4px 8px;
+        font-size: 0.8rem;
+        cursor: pointer;
     }
 
     div {  
@@ -30,9 +59,10 @@
     }
 
     pre {
-        padding: 10px 0px 10px 10px;
+        padding: 16px 0px 16px 16px;
         line-height: 1.2;
         font-family: 'IBM Plex Mono', monospace;  
+        position: relative;
     }
 
     
