--- a/src/pages/tutorials/[...slug].astro
+++ b/src/pages/tutorials/[...slug].astro
@@ -20,8 +20,8 @@ export const components = {
     hr: DocHr
 };
 
-import DocLayout from '../../layouts/DocLayout.astro';
+import TutorialLayout from '../../layouts/TutorialLayout.astro';
 ---
-<DocLayout>
+<TutorialLayout>
     <Content components={components} />
-</DocLayout>
+</TutorialLayout>
