--- a/src/pages/tutorials/index.astro
+++ b/src/pages/tutorials/index.astro
@@ -1,12 +1,12 @@
 ---
-import DocLayout from '@layouts/DocLayout.astro';
+import TutorialLayout from '@layouts/TutorialLayout.astro';
 ---
 
-<DocLayout title="pyHarvest">
+<TutorialLayout title="pyHarvest">
 	<div>
 		
 	</div>
-</DocLayout>
+</TutorialLayout>
 
 <style>
 
