--- a/src/components/DocCode.astro
+++ b/src/components/DocCode.astro
@@ -1,11 +1,10 @@
 ---
-// const props = Astro.props;
-//const html = await Astro.slots.render('default')
 ---
 <code><slot /></code>
 <style>
     code {
         font-family: 'IBM Plex Mono', monospace;
         font-size: 0.8rem;
+        position: relative;
     }
 </style>
